--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y
             eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin
             cargarlo con elementos innecesarios.</p>
-          <p class="modal__paragraph">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a>
+          <p class="modal__paragraph">En nuestra pagina de <a href="/html/recipe.html" class="modal__vinculo">recetas</a>
             podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
           <a href="#" class="modal__close">Cerrar</a>
         </div>
@@ -134,7 +134,7 @@
             gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y
             eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin
             cargarlo con elementos innecesarios.</p>
-          <p class="modal__paragraph">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a>
+          <p class="modal__paragraph">En nuestra pagina de <a href="/html/recipe.html" class="modal__vinculo">recetas</a>
             podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
           <a href="#" class="modal__close1">Cerrar</a>
         </div>
