--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <img src="/assets/images/vaso-img.png" alt="Vaso Sonriente">
           <h2 class="modal__title">Resultados</h2>
           <p class="modal__paragraph1">¡Debes tomar 2.5lts de agua!</p>
-          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de
+          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diarios. Se necesitan unos 35 minutos de
             caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar
             a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los
             alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el
@@ -126,7 +126,7 @@
           <img src="/assets/images/vaso-img.png" alt="Vaso Sonriente">
           <h2 class="modal__title">Resultados</h2>
           <p class="modal__paragraph1">¡Debes tomar 3lts de agua!</p>
-          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de
+          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diarios. Se necesitan unos 35 minutos de
             caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar
             a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los
             alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el
